<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
	      http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>argonms</groupId>
    <artifactId>argonms</artifactId>
    <version>0.6.0-SNAPSHOT</version>

    <build>
        <sourceDirectory>src/argonms</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
                <version>5.44.0</version>
                <configuration>
                    <exportDatatables>true</exportDatatables>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-migrate-java</artifactId>
                        <version>2.26.1</version>
                    </dependency>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-java-security</artifactId>
                        <version>2.14.0</version>
                    </dependency>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-static-analysis</artifactId>
                        <version>1.18.0</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15 -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15</artifactId>
            <version>1.46</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mozilla/rhino -->
        <dependency>
            <groupId>org.mozilla</groupId>
            <artifactId>rhino</artifactId>
            <version>1.7.13</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.22</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-configuration2</artifactId>
            <version>2.7</version>
        </dependency>
    </dependencies>

    <profiles>
        <!--
            Quality-baseline profile – opt-in, not active by default.
            Activate with: mvn verify -P quality-baseline
        -->
        <profile>
            <id>quality-baseline</id>
            <build>
                <plugins>

                    <!-- ===== JDK / Maven guardrails ===== -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-enforcer-plugin</artifactId>
                        <version>3.4.1</version>
                        <executions>
                            <execution>
                                <id>enforce-versions</id>
                                <goals>
                                    <goal>enforce</goal>
                                </goals>
                                <configuration>
                                    <rules>
                                        <requireJavaVersion>
                                            <!-- Require Java 17 or newer -->
                                            <version>[17,)</version>
                                        </requireJavaVersion>
                                        <requireMavenVersion>
                                            <!-- Require Maven 3.8 or newer -->
                                            <version>[3.8,)</version>
                                        </requireMavenVersion>
                                        <banDuplicatePomDependencyVersions/>
                                    </rules>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- ===== SpotBugs (with optional FindSecBugs) ===== -->
                    <plugin>
                        <groupId>com.github.spotbugs</groupId>
                        <artifactId>spotbugs-maven-plugin</artifactId>
                        <version>4.8.3.1</version>
                        <configuration>
                            <effort>Max</effort>
                            <threshold>Medium</threshold>
                            <failOnError>true</failOnError>
                            <plugins>
                                <plugin>
                                    <groupId>com.h3xstream.findsecbugs</groupId>
                                    <artifactId>findsecbugs-plugin</artifactId>
                                    <version>1.13.0</version>
                                </plugin>
                            </plugins>
                        </configuration>
                        <executions>
                            <execution>
                                <id>spotbugs-check</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- ===== Checkstyle ===== -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-checkstyle-plugin</artifactId>
                        <version>3.6.0</version>
                        <configuration>
                            <!--
                                Uses Google Java Style by default.
                                Override by placing a custom checkstyle.xml on the
                                classpath or setting -Dcheckstyle.config.location=<path>.
                            -->
                            <configLocation>google_checks.xml</configLocation>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <violationSeverity>warning</violationSeverity>
                        </configuration>
                        <executions>
                            <execution>
                                <id>checkstyle-check</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- ===== Forbidden-APIs ===== -->
                    <plugin>
                        <groupId>de.thetaphi</groupId>
                        <artifactId>forbiddenapis</artifactId>
                        <version>3.7</version>
                        <configuration>
                            <failOnUnresolvableSignatures>false</failOnUnresolvableSignatures>
                            <bundledSignatures>
                                <!-- Forbid deprecated / unsafe JDK APIs -->
                                <bundledSignature>jdk-unsafe</bundledSignature>
                                <bundledSignature>jdk-deprecated</bundledSignature>
                                <bundledSignature>jdk-non-portable</bundledSignature>
                                <!-- Forbid dangerous Commons-IO / Commons-Lang APIs -->
                                <bundledSignature>commons-io-unsafe-2.5</bundledSignature>
                            </bundledSignatures>
                        </configuration>
                        <executions>
                            <execution>
                                <id>forbiddenapis-check</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- ===== PMD ===== -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-pmd-plugin</artifactId>
                        <version>3.21.2</version>
                        <configuration>
                            <targetJdk>17</targetJdk>
                            <failOnViolation>true</failOnViolation>
                            <printFailingErrors>true</printFailingErrors>
                            <rulesets>
                                <ruleset>category/java/bestpractices.xml</ruleset>
                                <ruleset>category/java/errorprone.xml</ruleset>
                                <ruleset>category/java/security.xml</ruleset>
                            </rulesets>
                        </configuration>
                        <executions>
                            <execution>
                                <id>pmd-check</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- ===== OpenRewrite dry-run ===== -->
                    <!--
                        Run with: mvn rewrite:dryRunNoFork -P quality-baseline
                        This generates diff reports under target/rewrite without
                        modifying sources.
                    -->
                    <plugin>
                        <groupId>org.openrewrite.maven</groupId>
                        <artifactId>rewrite-maven-plugin</artifactId>
                        <version>5.34.1</version>
                        <configuration>
                            <exportDatatables>true</exportDatatables>
                            <activeRecipes>
                                <recipe>org.openrewrite.java.migrate.UpgradeToJava17</recipe>
                                <recipe>org.openrewrite.java.security.SecureRandom</recipe>
                            </activeRecipes>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>org.openrewrite.recipe</groupId>
                                <artifactId>rewrite-migrate-java</artifactId>
                                <version>2.21.0</version>
                            </dependency>
                            <dependency>
                                <groupId>org.openrewrite.recipe</groupId>
                                <artifactId>rewrite-java-security</artifactId>
                                <version>2.14.0</version>
                            </dependency>
                        </dependencies>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>
</project>